# r-ising-model

./: .gitignore  Cargo.toml  README.md  Taskfile.yml  version.json  web.Dockerfile
gui/: Cargo.toml  index.html
gui/assets/: sw.js
gui/src/: app.rs  main.rs
internal/: Cargo.toml
internal/src/: lib.rs
r-ising-desktop/: Cargo.toml
r-ising-desktop/src/: main.rs
r-ising-terminal/: Cargo.toml
src/: main.rs
tui/: Cargo.toml
tui/src/: main.rs
web/: Cargo.toml
web/src/: config.rs  main.rs
